更新万能倒计时的新版本下载链接；修复在移动设备上显示的B站视频默认比例不是16:9的问题。Update the download link for the new version of Universal-Timer; fix the issue where Bilibili videos displayed on mobile devices do not default to a 16:9 aspect ratio.

--- a/css/style.css
+++ b/css/style.css
@@ -809,7 +809,7 @@ footer ul li a:hover::after {
     }
     .video-container {
         width: 100%;
-        height: calc(9 / 16 * 100%);
+    padding-bottom: calc(9 / 16 * 100%); /* 默认16:9 */
     }
     footer .show {
         flex-direction: column;
